retry_faliure/backend_virtual_service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - minikube-ingress-gateway
  http:
    - name: "backend-v2"
      match:
      - queryParams:
          version:
            exact: "v2"
      route:
      - destination:
          host: backend-service.backend.svc.cluster.local
          subset: version2
          port:
           number: 8899
    - name: "fallback"
      match:
      - queryParams:
          version:
            exact: "fallback"
      route:
      - destination:
          host: httpbin.org
          port:
           number: 80
    - name: "backend-default"
      route:
      - destination:
          host: backend-service.backend.svc.cluster.local
          subset: default
          port:
           number: 8899
