retry_faliure/external_destination_rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: external-svc-dr
  namespace: istio-system
spec:
  host: httpbin.org
